Changes for 1.9

 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

Changes for 1.8.2

 - [ZBX-2160] fixed permission issue in reports when accessing by user or admin (Aly)
 - [ZBX-1346] explicitly note that hostname in configuration files is case sensitive (Richlv)
 - [ZBX-2006] added explicit dependency on "lber" library to gain better portability on upcoming Fedora "ld" changes. Thanks to Dan Horak. (Dmitry)
 - [ZBX-1575] added UnsafeUserParameters configuration option for agents (asaveljevs)
 - [ZBX-2108] added checking double values for "out of range" errors for the MySQL (Sasha)
 - [ZBX-2114] improvements in sql filtering of hosts and templates by nodes (Aly)
 - [ZBX-18,ZBX-1018,ZBX-1070,ZBX-1123,ZBXNEXT-96] dealing with database problems in a uniform way for all database engines (asaveljevs,Sasha)
 - [ZBX-2089] fixed computing calculated items for proxied hosts (asaveljevs,Sasha)
 - [ZBX-2109] disabled Web monitoring for disabled hosts and hosts under maintenance (asaveljevs,Sasha)
 - [ZBX-2121] events from Windows eventlog with type 'EVENTLOG_SUCCESS' are treated as 'Information' in Zabbix as in Windows (Dmitry)
 - [ZBX-1994] using /proc/sys instead of the deprecated sysctl() on Linux (asaveljevs)
 - [ZBXNEXT-236] added support of comma delimited list of host groups in aggregate checks (Sasha)
 - [ZBXNEXT-236] added support of item keys with brackets ("") in aggregate checks (Sasha)
 - [ZBXNEXT-236] added support of arrays in item key parameters (Sasha)
 - [ZBX-1371] improved performance of the configuration screens hostgroups, templates, hosts (Aly)
 - [DEV-452] support of s,m,h,d,w,T suffixes in trigger expressions and functions (asaveljevs,Vedmak)
 - [ZBX-1357] added Ukrainian translation; thanks to zalex_ua (Richlv)
 - [ZBX-2013] fixed error in trigger test screen (Vedmak)
 - [ZBX-2087] fixed permission scheme in actions (Aly)
 - [ZBX-2067] fixed undefined variable errors in actions screen (Aly)