@@ -4,6 +4,7 @@ Changes for 1.9
 
 Changes for 1.8.2
 
+ - [ZBX-2163] fixed possibility to acknowledge events regradless of GUI events settings (Aly)
  - [ZBX-2160] fixed permission issue in reports when accessing by user or admin (Aly)
  - [ZBX-1346] explicitly note that hostname in configuration files is case sensitive (Richlv)
  - [ZBX-2006] added explicit dependency on "lber" library to gain better portability on upcoming Fedora "ld" changes. Thanks to Dan Horak. (Dmitry)
